codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_help.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab     Send message                            "
"  @        Mention files        ⌥+,     Less reasoning                          "
"  !        Shell command        ⌥+.     More reasoning                          "
"  ctrl+j   New line             ←       Agents (empty prompt)                   "
"  ctrl+v   Paste image          f4      Inspect activity                        "
"  ctrl+g   External editor      ctrl+c  Quit                                    "
"  ctrl+r   Search history                                                       "
"  esc esc  Edit last message    Transcript (open first)                         "
"                                ctrl+t                 Open transcript          "
"                                f3                     Find text                "
"                                pgup / pgdn            Scroll                   "
"                                ctrl+space             Start selection          "
"                                ctrl+home / ctrl+end   Top / latest             "
"                                shift+⌥+, / shift+⌥+.  Top / latest             "
"                                                                                "
"  /keymap customize                                                             "
"                                                                                "
"› Ask Codez to do anything                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ? / esc close                                                                 "
